--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     font-family: arial;
   }
   
-  @keyframes slideright {
+  @keyframes slideright { /* servem para definir etapas de uma animação */
     from {
         background-position: 70000%;
     }
@@ -39,8 +39,8 @@ body {
     bottom: 0px;
     background-image: url('background.png');
     background-repeat: repeat-x;
-    animation: slideright 600s infinite linear;
-    -webkit-animation: slideright 600s infinite linear;
+    animation: slideright 600s infinite linear; /*o fundo nunca vai parar de correr no eixo x*/
+    -webkit-animation: slideright 600s infinite linear; /* executa de maneira linear do inicio ao fim, sem variações */
     width: 100%;
     height: 200px;
   }
